<?xml version="1.0"?>
<package>
  <name>filter_tf</name>
  <version>0.0.0</version>
  <description>The filter_tf package</description>
  <maintainer email="c.mower@ed.ac.uk">Christopher E. Mower</maintainer>
  <!-- <maintainer email="jakevarley@gmail.com">jvarley</maintainer> -->
  <license>MIT</license>
  <author email="jakevarley@gmail.com">Jake Varley</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy<depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>python-numpy</depend>
</package>
