<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>filter_tf</name>
  <version>0.0.0</version>
  <description>The filter_tf package</description>
  <maintainer email="c.mower@ed.ac.uk">Christopher E. Mower</maintainer>
  <!-- <maintainer email="jakevarley@gmail.com">jvarley</maintainer> -->
  <license>MIT</license>
  <author email="jakevarley@gmail.com">Jake Varley</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>python-numpy</depend>
</package>
